# lion-perplexity

./: README.md  pyproject.toml
lion_perplexity/: __init__.py  match_response.py  perplexity_model.py  perplexity_service.py
lion_perplexity/api_endpoints/: api_request.py  data_models.py
lion_perplexity/api_endpoints/chat_completions/: types.py
lion_perplexity/api_endpoints/chat_completions/request/: message_models.py  request_body.py
lion_perplexity/api_endpoints/chat_completions/response/: choice_models.py  response_body.py  usage_models.py
